Bug 228861. Ensure that CLIP and FILTER display list instructions are added even if they appear to be outside the dirty area. Content may be reparented under them that does intersect the dirty area and is affected by the display list instructions. r+sr=dbaron